<resources>
    <string name="app_name">Cuma Hutbeleri</string>
    <string name="menu_item_add">Add</string>
    <string name="menu_item_settings">Settings</string>
    <string name="sermons">Cuma Hutbeleri</string>
    <string name="about">Uygulama hakkında</string>
    <string name="inthefuture">Yakın zamanda...</string>
    <string name="ok">Tamam</string>
    <string name="new_sermon">Yeni!</string>
    <string name="inthefuture_text">Uygulamaya hutbe eklendiğinde bildirim gelmesi planlanmaktadır.</string>

    <string name="SCROLL_FLAG_ENTER_ALWAYS">ENTER_ALWAYS</string>
    <string name="SCROLL_FLAG_ENTER_ALWAYS_COLLAPSED">ENTER_ALWAYS_COLLAPSED</string>
    <string name="SCROLL_FLAG_EXIT_UNTIL_COLLAPSED">EXIT_UNTIL_COLLAPSED</string>
    <string name="SCROLL_FLAG_SCROLL">SCROLL</string>
    <string name="about_text">Cuma hutbeleri her cuma uygulamaya eklenir. Geçmiş hutbelere de uygulama üzerinden ulaşabilirsiniz.</string>

    <string name="content_button">Push me</string>
    <string name="content_text_one">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In a quam tincidunt urna feugiat vestibulum quis non dolor. Phasellus porttitor sem arcu, quis ultrices mauris rutrum commodo. Quisque at lobortis libero. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus consectetur nisi eget leo imperdiet congue hendrerit et eros. Curabitur sed odio euismod, mattis enim feugiat, faucibus ante. Maecenas iaculis, elit ac bibendum lacinia, dolor libero auctor justo, finibus malesuada ex metus eget elit. Vestibulum sit amet finibus massa. Nulla id eros lectus. Donec vestibulum feugiat euismod. Proin tincidunt nulla in velit dapibus fermentum. Phasellus egestas sed ipsum id malesuada. Nullam at dignissim nunc. Vivamus mollis lobortis tristique.

Ut justo velit, consectetur sit amet porttitor et, scelerisque et odio. Suspendisse viverra in risus sit amet pharetra. Suspendisse sit amet ipsum est. Duis porta lacus ultrices, posuere sapien sollicitudin, vestibulum nibh. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In fringilla tincidunt tincidunt. Vivamus mollis lorem et mattis tempor. Morbi volutpat arcu lorem, a lobortis turpis blandit ac. Curabitur dolor erat, auctor tristique porttitor id, venenatis at nunc. Suspendisse efficitur elit sem, sed interdum ligula commodo nec. Cras semper justo vel auctor hendrerit. Nam dui diam, pretium ac tristique eu, porttitor a urna. Cras ac sagittis mi, eu bibendum lacus.

Aenean in arcu laoreet, gravida orci et, faucibus velit. Etiam finibus viverra tortor vel pretium. Curabitur vitae ex sed ex convallis suscipit. Pellentesque malesuada hendrerit neque, et vestibulum ligula mollis at. Mauris vehicula nisl quam, et eleifend orci varius eget. Quisque ut urna eu ipsum commodo feugiat. Suspendisse ac sem nec enim laoreet dictum venenatis eget neque. Donec egestas suscipit leo, sodales posuere nibh accumsan nec. Sed nec erat aliquam, hendrerit sapien non, fermentum diam. Aliquam erat volutpat. Aliquam varius semper purus, ac accumsan arcu finibus non.
    </string>
    <string name="content_text_two">Nam ultrices, nunc sit amet vulputate vehicula, eros sem malesuada augue, quis cursus sem orci id magna. Vestibulum neque nibh, scelerisque eget urna nec, malesuada aliquam magna. Aenean varius justo tellus. Donec non leo ut turpis condimentum pharetra. Vestibulum lacinia lobortis volutpat. Suspendisse viverra augue a quam pellentesque fringilla. Fusce at purus nisl. Maecenas at justo nec sem efficitur finibus. Etiam sodales sit amet nulla non dapibus. Donec eget ante quam.</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="title_activity_reading">ReadingActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="other_apps">Geliştiricinin Diğer Uygulamaları</string>
    <string name="app1_name">Çizim Uygulaması</string>
    <string name="app2_name">Sesli Notlar</string>
    <string name="app3_name">Minibo</string>
    <string name="donate">Geliştiriciye katkıda bulunun.</string>
    <string name="donate_explain">Uygulamanın reklamsız bir şekilde devam edebilmesi için geliştiriciye destek olun.</string>
    <string name="iban">"Finansbank: TR32 0011 1000 0000 0061 3567 00 (Kopyala)"</string>
    <string name="iban_copy_text">"TR32 0011 1000 0000 0061 3567 00"</string>
    <string name="special_days_title">Dini Günler ve Bayramlar</string>
    <string name="special_days_menu_item">Dini Günler</string>
    <string name="settings_menu_item">Ayarlar</string>
    <string name="share_button">share_button</string>
    <string name="sermontitle">sermontitle</string>
    <string name="izim_uygulamas">Çizim Uygulaması</string>
    <string name="font_size">Yazı tipi boyutu</string>
    <string name="circle">Circle\n</string>
    <string name="arrow">Arrow\n</string>
    <string name="compass">Kıble Pusulası</string>
    <string name="qibla">Kıble Yönü</string>
    <string name="sermon_image">sermon_image</string>
    <string name="close">Kapat</string>
    <string name="analyze">İncele</string>
    <string name="later">Daha Sonra</string>
    <string name="premium_popup_title">Aylık Abonelik Oluşturun</string>
    <string name="premium_popup_message">Tüm hutbe arşivine sınırsız erişim sağlamak ve hutbe eklendiğinde bildirim almak için abone olun.</string>
    <string name="premium">Abone ol</string>

    <string name="rate_us_message">%s uygulamasını değerlendirmek ister misin?</string>
    <string name="cancel">İptal</string>
</resources>
