<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.activities.AboutActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/coordinator"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <!-- Değişiklik burada başlıyor -->
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="34dp"
                    android:layout_marginStart="34dp"
                    android:layout_marginBottom="12dp"
                    android:textSize="32sp"
                    android:text="@string/sermons"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_text"
                    android:layout_marginLeft="34dp"
                    android:layout_marginRight="34dp"
                    android:layout_marginBottom="24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="34dp"
                    android:textSize="24sp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/other_apps" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginLeft="34dp"
                    android:layout_marginRight="34dp"
                    android:background="@drawable/gray_radius_bg"
                    android:padding="12dp"
                    android:onClick="drawingClick">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:id="@+id/image1"
                        android:src="@drawable/drawing_app_logo" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_toEndOf="@id/image1"
                        android:orientation="horizontal"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:weightSum="4"
                        android:gravity="center_vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:layout_weight="3"
                            android:text="@string/app1_name"/>

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="12dp"
                            android:contentDescription="@string/izim_uygulamas"
                            android:scaleType="fitStart"
                            android:layout_weight="1"
                            android:src="@drawable/play_image" />
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginLeft="34dp"
                    android:layout_marginRight="34dp"
                    android:background="@drawable/gray_radius_bg"
                    android:padding="12dp"
                    android:layout_marginTop="12dp"
                    android:onClick="voiceNotesClick">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:id="@+id/image2"
                        android:contentDescription="@string/app2_name"
                        android:src="@drawable/senote" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_toEndOf="@id/image2"
                        android:orientation="horizontal"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:weightSum="4"
                        android:gravity="center_vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:layout_weight="3"
                            android:text="@string/app2_name"/>

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="12dp"
                            android:contentDescription="@string/app2_name"
                            android:scaleType="fitStart"
                            android:layout_weight="1"
                            android:src="@drawable/play_image" />
                    </LinearLayout>
                </RelativeLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="32dp"
                    android:layout_marginStart="34dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/donate"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="34dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/donate_explain"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="34dp"
                        android:layout_marginRight="34dp"
                        android:text="@string/iban"
                        android:gravity="center"
                        android:onClick="copy"></TextView>
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
        <!-- Değişiklik burada bitiyor -->

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>